Bug fix iframe width was cut off.
Added the appropriate width to the iframe container.

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,9 @@ select{
 .div_collapsable{
     display: none;
 }
+.div_iframe_width{
+    width: 75% !important;
+}
 .div_iframe{
     padding-top: 20px;
 }
